improved how overflow is handled and incorported lombok